--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "start": "webpack-dev-server --hot --config ./webpack.config.js",
     "clean": "rimraf dist",
-    "build": "webpack --config ./webpack.config.js --mode production"
+    "build": "webpack --config ./webpack.config.js --mode production",
+    "commit": "git cz"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -22,6 +23,7 @@
     "@types/react-dom": "^18.0.5",
     "babel-loader": "^8.0.6",
     "css-loader": "^5.1.3",
+    "cz-conventional-changelog": "^3.3.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.1",
     "raw-loader": "^4.0.2",
@@ -31,5 +33,10 @@
     "webpack": "^5.68.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^4.7.4"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
